Fix sidebar name wrap, restore Home label, right-float homepage image; improve Scandit experience

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,7 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
   line-height: 1.2;
+  max-width: 14ch;
 }
 
 
